# libgoldilocks

./: .gitignore  .splintrc  .travis.yml  CONTRIBUTORS.txt  Doxyfile  HISTORY.txt  LICENSE.txt  Makefile  Makefile.am  Makefile.custom  Makefile.original  README.md  TODO.txt  configure.ac  variables.am
aux/: curve.sage  decaffeinate_curve25519.sage  decaffeinate_ed25519_too.sage  idealized.sage  ristretto.sage
aux/ristretto/: ristretto.sage  ristretto.tex
include/: decaf.h  decaf_255.h  decaf_255.hxx  decaf_448.h  decaf_448.hxx  decaf_common.h  decaf_crypto.h  secure_buffer.hxx  shake.h  shake.hxx
pkgconfig/: Makefile.am  libdecaf.pc.in  libgoldilocks.pc.in
python/: ed448.py  setup.py
python/edgold/: __init__.py  ed448.py
src/: Makefile.am  decaf.c  decaf_crypto.c  decaf_crypto_255.c  decaf_crypto_448.c  decaf_fast.c  decaf_gen_tables.c  eddsa.c  elligator.c  f_field.h  f_generic.c  goldilocks.c  goldilocks_gen_tables.c  per_field.c  scalar.c  sha512.c  shake.c  spongerng.c  strobe.c  utils.c
src/arch_x86_64/: f_impl.c  f_impl.h
src/curve_ed25519/: curve_data.inc.c  field
src/curve_ed448goldilocks/: curve_data.inc.c  field
src/gen_headers/: crypto_h.py  crypto_hxx.py  curve_data.py  curve_data_inc_c.py  decaf.h.py  decaf.hxx.py  decaf_h.py  decaf_hxx.py  f_field_h.py  gen_file.py  main.py  template.py
src/generator/: curve_data.py  template.py
src/include/: api.h  constant_time.h  decaf_255_config.h  field.h  keccak_internal.h  portable_endian.h  word.h
src/include/arch_32/: arch_intrinsics.h
src/include/arch_arm_32/: arch_intrinsics.h
src/include/arch_neon/: arch_intrinsics.h
src/include/arch_ref64/: arch_intrinsics.h
src/include/arch_x86_64/: arch_intrinsics.h
src/include/decaf/: crypto.tmpl.hxx  strobe.h  strobe.hxx
src/include/goldilocks/: crypto.tmpl.hxx
src/p25519/: decaf_config.h  f_arithmetic.c  f_field.h
src/p25519/arch_32/: f_impl.c  f_impl.h
src/p25519/arch_ref64/: arch_config.h  f_impl.c  f_impl.h  p25519.c  p25519.h
src/p25519/arch_x86_64/: arch_config.h  f_impl.c  f_impl.h  p25519.c  p25519.h  x86-64-arith.h
src/p448/: decaf_config.h  f_arithmetic.c  f_field.h
src/p448/arch_32/: f_impl.c  f_impl.h
src/p448/arch_arm_32/: arch_config.h  f_impl.c  f_impl.h
src/p448/arch_neon/: f_impl.c  f_impl.h
src/p448/arch_neon_experimental/: arch_config.h  f_impl.c  f_impl.h  p448.c
src/p448/arch_ref64/: arch_config.h  f_impl.c  f_impl.h
src/p448/arch_x86_64/: arch_config.h  f_impl.c  f_impl.h  x86-64-arith.h
src/p480/: f_arithmetic.c  f_field.h
src/p480/arch_x86_64/: f_impl.c  f_impl.h  x86-64-arith.h
src/p521/: f_arithmetic.c  f_field.h
src/p521/arch_ref64/: f_impl.c  f_impl.h
src/p521/arch_x86_64_r12/: f_impl.c  f_impl.h
src/per_curve/: crypto.tmpl.c  crypto.tmpl.h  crypto.tmpl.hxx  curve_data.tmpl.h  decaf.tmpl.c  decaf.tmpl.h  decaf.tmpl.hxx  decaf_gen_tables.tmpl.c  eddsa.tmpl.c  eddsa.tmpl.h  eddsa.tmpl.hxx  elligator.tmpl.c  goldilocks.tmpl.c  goldilocks_gen_tables.tmpl.c  point.tmpl.h  point.tmpl.hxx  scalar.tmpl.c
src/per_field/: f_field.tmpl.h  f_generic.tmpl.c
src/public_include/: decaf.h  decaf.hxx  decaf.tmpl.h  decaf.tmpl.hxx  goldilocks.h  goldilocks.hxx  goldilocks.tmpl.h  goldilocks.tmpl.hxx
src/public_include/decaf/: common.h  crypto.h  crypto.hxx  crypto.tmpl.h  crypto.tmpl.hxx  crypto_255.h  crypto_448.h  decaf_255.h  decaf_255.hxx  decaf_448.h  decaf_448.hxx  eddsa.tmpl.hxx  secure_buffer.hxx  sha512.h  sha512.hxx  shake.h  shake.hxx  spongerng.h  spongerng.hxx  strobe.h  strobe.hxx
src/public_include/goldilocks/: common.h  crypto.hxx  ed448.h  ed448.hxx  eddsa.hxx  eddsa.tmpl.hxx  point_448.h  point_448.hxx  secure_buffer.hxx  shake.h  shake.hxx  spongerng.h  spongerng.hxx
test/: Makefile.am  bench_decaf.cxx  bench_goldilocks.cxx  ristretto.cxx  ristretto_vectors.inc.cxx  shakesum.c  test_ct.cxx  test_decaf.cxx  test_decaf.sage  test_goldilocks.cxx  test_goldilocks.sage  test_templates.cxx  vectors.inc.c  vectors.inc.cxx
